[package]
name = "matrix-timebot"
version = "0.1.0"
authors = ["Will Hakes <info@cwilliamhakes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ruma-client = "*"
tokio = {version = "0.2", features = [ "macros", "rt-core"]}